# budgetman

./: .env  .gitignore  Cargo.toml  README.md
budgetman/: Cargo.toml
budgetman/src/: main.rs  utils.rs
budgetman/src/views/: account.rs  mod.rs  views_404_500.rs
budgetman/templates/: 404.html  500.html  base.html  index.html
budgetman/templates/account/: login.html
budgetman_api/: Cargo.toml
budgetman_api/src/: lib.rs  utils.rs
budgetman_api/src/handlers/: mod.rs
budgetman_crud/: Cargo.toml
budgetman_crud/migrations/: 20211123124146_create_users.up.sql  20211128131752_create_accounts.up.sql
budgetman_crud/src/: accounts.rs  lib.rs
budgetman_crud/src/entities/: user.rs
budgetman_crud/src/models/: user.rs
common/: Cargo.toml
common/src/: auth.rs  lib.rs  requests.rs  responses.rs
common/src/models/: account.rs  user.rs
migrations/: 20211123124146_create_users.up.sql  20211128131752_create_accounts.up.sql  20220101104240_add_tags.up.sql  20220103172828_add_collation.down.sql  20220103172828_add_collation.up.sql  20220103173821_use_case_insesitive_collation.down.sql  20220103173821_use_case_insesitive_collation.up.sql
src/: error.rs  html_template.rs  main.rs  requests.rs
src/api/: handlers.rs  mod.rs
src/crud/: accounts.rs  mod.rs  tags.rs
src/extract/: json.rs  mod.rs  query.rs
src/models/: account.rs  mod.rs  tag.rs  user.rs
src/utils/: auth.rs  mod.rs
src/views/: account.rs  mod.rs  views_404.rs  views_500.rs
templates/: 404.html  base.html
templates/account/: base.html
