[package]
name = "budgetman"
version = "0.1.0"
edition = "2021"
description = "Yet another app to help you budget.."
readme = "README.md"


[dependencies]
anyhow = "1"
thiserror = "1"

axum = { version = "0.4", features = ["headers"] }
tower-http = { version = "0.2.0", features = ["fs", "trace"] }
tower-cookies = "0.4"
tokio = { version = "1", features = ["full"] }
askama = "0.11"
headers = "0.3"

serde = "1"
serde_json = "1"

dotenv = "0.15"
once_cell = "1"

argon2 = "0.3"
jwt-simple = "0.10"
uuid = { version = "0.8", default-features = false, features = ["serde", "v4"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[dependencies.sea-query]
version = "0.20"
default-features = false
features = [
    "derive",
    "thread-safe",
    "backend-sqlite",
    "sqlx-sqlite",
    "with-uuid",
    "serde_json"
]

[dependencies.sqlx]
version = "0.5"
features = [
    "sqlite",
    "macros",
    "uuid",
    "runtime-tokio-rustls",
    "migrate",
    "all-types"
]
