[package]
name = "budgetman"
version = "0.1.0"
edition = "2021"
description = "Yet another app to help you budget.."
readme = "README.md"


[dependencies]
common = { path = "../common" }
api = { path = "../budgetman_api", package = "budgetman_api" }
crud = { path = "../budgetman_crud", package = "budgetman_crud" }

anyhow = "1"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
askama = { version = "0.10", features = ["with-warp"] }
askama_warp = "0.11" # Used by askama's `with-warp` feature internally
dotenv = "0.15"
sqlx = "*"
