[package]
name = "budgetman_api"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
crud = { path = "../budgetman_crud", package = "budgetman_crud" }
warp = "0.3"
serde = "1"
serde_json = "1"
anyhow = "1"

sqlx = "*" # The specific version and features are in the crud package
