[package]
name = "budgetman_crud"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
sqlx = { version = "0.5", features = ["sqlite", "runtime-tokio-rustls"]} # For running migrations on startup
sea-orm = { version = "0.4", features = ["sqlx-sqlite", "runtime-tokio-rustls", "sqlx-uuid", "with-uuid"] }
uuid = { version = "0.8", default-features = false, features = ["serde", "v4"] }
