[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = "1"
argon2 = "0.3"
anyhow = "1"
warp = "0.3"
serde_json = "1"
once_cell = "1"
jwt-simple = "0.10"

[dependencies.sea-query]
version = "0.19"
default-features = false
features = [
    "derive",
    "thread-safe",
    "backend-sqlite",
    "sqlx-sqlite",
    "with-uuid",
    "serde_json"
]

[dependencies.sqlx]
version = "0.5"
features = [
    "sqlite",
    "macros",
    "uuid",
    "runtime-tokio-rustls",
    "migrate",
    "all-types"
]
